--- a/Wprowadzenie_do_środowiska.ipynb
+++ b/Wprowadzenie_do_środowiska.ipynb
@@ -174,13 +174,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "FNv4tixm80Kc"
+        "id": "FNv4tixm80Kc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4f4da242-b20f-4c88-c453-9833faf5c2bb"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "liczba: 9, liczba zmiennoprzecinkowa: 8.9, napis: Tekst, zmienna logiczna False, zmienna znakowa f\n",
+            "Zmienna liczba jest typu <class 'int'>\n"
+          ]
+        }
+      ],
       "source": [
-        "liczba = 6\n",
+        "liczba = 9\n",
         "zmiennoprzecinkowa = 8.9\n",
         "napis = \"Tekst\"\n",
         "logiczna = False\n",
@@ -197,10 +210,22 @@
         "print(f\"Zmienna liczba jest typu {type(liczba)}\")"
       ],
       "metadata": {
-        "id": "LF219nZ4evsF"
+        "id": "LF219nZ4evsF",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d24138f9-f410-411b-c2dc-0ef81d9cba1f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Zmienna liczba jest typu <class 'str'>\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -230,10 +255,25 @@
         "print(gry)"
       ],
       "metadata": {
-        "id": "siqKGkTtkgfb"
+        "id": "siqKGkTtkgfb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8f3186ad-9f5b-4bcf-9d96-88c16ca32cc4"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['fortnite', 'minecraft', 'roblox']\n",
+            "[1, 'minecraft', 2, 'roblox']\n",
+            "pierwszyy element listy gry fortnite\n",
+            "['fortnite', 'minecraft', 'roblox', 'cs']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
